--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -33,11 +33,11 @@ dist.javadoc.dir=${dist.dir}/javadoc
 dist.jlink.dir=${dist.dir}/jlink
 dist.jlink.output=${dist.jlink.dir}/AssignmentDS
 excludes=
-file.reference.mysql-connector-java-8.0.17.jar=..\\..\\..\\..\\mysql-connector-java-8.0.17.jar
+file.reference.mysql-connector-j-8.4.0.jar=C:\\Users\\xinph\\Downloads\\mysql-connector-j-8.4.0 (1)\\mysql-connector-j-8.4.0\\mysql-connector-j-8.4.0.jar
 includes=**
 jar.compress=false
 javac.classpath=\
-    ${file.reference.mysql-connector-java-8.0.17.jar}
+    ${file.reference.mysql-connector-j-8.4.0.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
