--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -1,9 +1,10 @@
 annotation.processing.enabled=true
 annotation.processing.enabled.in.editor=false
-annotation.processing.processor.options=
 annotation.processing.processors.list=
 annotation.processing.run.all.processors=true
 annotation.processing.source.output=${build.generated.sources.dir}/ap-source-output
+application.title=AssignmentDS
+application.vendor=lavin
 build.classes.dir=${build.dir}/classes
 build.classes.excludes=**/*.java,**/*.form
 # This directory is removed when the project is cleaned:
@@ -32,12 +33,15 @@ dist.jar=${dist.dir}/AssignmentDS.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 dist.jlink.dir=${dist.dir}/jlink
 dist.jlink.output=${dist.jlink.dir}/AssignmentDS
+endorsed.classpath=
 excludes=
 file.reference.mysql-connector-j-8.4.0.jar=C:\\Users\\xinph\\Downloads\\mysql-connector-j-8.4.0 (1)\\mysql-connector-j-8.4.0\\mysql-connector-j-8.4.0.jar
+file.reference.mysql-connector-j-8.4.0.jar-1=C:\\Users\\lavin\\Downloads\\mysql-connector-j-8.4.0\\mysql-connector-j-8.4.0\\mysql-connector-j-8.4.0.jar
 includes=**
 jar.compress=false
 javac.classpath=\
-    ${file.reference.mysql-connector-j-8.4.0.jar}
+    ${file.reference.mysql-connector-j-8.4.0.jar}:\
+    ${file.reference.mysql-connector-j-8.4.0.jar-1}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
@@ -46,8 +50,8 @@ javac.modulepath=
 javac.processormodulepath=
 javac.processorpath=\
     ${javac.classpath}
-javac.source=21
-javac.target=21
+javac.source=11
+javac.target=11
 javac.test.classpath=\
     ${javac.classpath}:\
     ${build.classes.dir}
