--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -37,11 +37,13 @@ endorsed.classpath=
 excludes=
 file.reference.mysql-connector-j-8.4.0.jar=C:\\Users\\xinph\\Downloads\\mysql-connector-j-8.4.0 (1)\\mysql-connector-j-8.4.0\\mysql-connector-j-8.4.0.jar
 file.reference.mysql-connector-j-8.4.0.jar-1=C:\\Users\\lavin\\Downloads\\mysql-connector-j-8.4.0\\mysql-connector-j-8.4.0\\mysql-connector-j-8.4.0.jar
+file.reference.mysql-connector-java-8.0.17.jar=/Users/panglang/Downloads/mysql-connector-java-8.0.17.jar
 includes=**
 jar.compress=false
 javac.classpath=\
     ${file.reference.mysql-connector-j-8.4.0.jar}:\
-    ${file.reference.mysql-connector-j-8.4.0.jar-1}
+    ${file.reference.mysql-connector-j-8.4.0.jar-1}:\
+    ${file.reference.mysql-connector-java-8.0.17.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
